Fixing sizing issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ main {
     color: white;
     border-radius: 10px;
     height: 100vh;
+    height: 100svh;
 }
 
 main > div {
